force-app/main/default/objects/vlocity_ins__InsuredGroupCensus__c/fields/vlocity_ins__EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>