force-app/main/default/objects/vlocity_ins__InsuredGroupCensus__c/fields/vlocity_ins__Source__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>